[update] api update